Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -27,7 +27,7 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">WiTech Lab</a></h1>
+									<h1><a href="#" id="logo">WiTech Lab</a></h1> 
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -154,14 +154,19 @@
 												<h2>Graduate Students</h2>
 											<p>
 												<center>
+                                                <a href="http://www.dianazhang.net/">
+																									<figure>
+																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <figcaption> Diana Zhang </figcaption> </figure>
+																								 </a>
 
-
-
+ 																								
      <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
-																								    <figcaption>Haojian Jin<br></a><div style="margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
+																								    <figcaption>Haojian Jin</a><br><div style="margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
+ 		
 
-																										 <a href="https://akshaygadre.github.io/"> 	<figure>																								<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <a href="https://akshaygadre.github.io/"> 	<figure>																								<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Akshay Gadre </figcaption> </figure>
 																								 </a>
 																								 <a href=" https://jingxianwang.github.io/">
@@ -188,6 +193,11 @@
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
 																								    <figcaption>Atul Bansal</a><br><div style="margin-bottom:10px">Co-advised by Prof. Bob Iannucci</div></figcaption> </figure>
 
+     <a href="https://gavinsyw.github.io/"> <figure> <img src="images/Yiwen.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Yiwen Song</a><br></figcaption> </figure>
+
+
 																								 </a>
 																							 </center>
 											</p>
@@ -207,22 +217,7 @@
 
 </header>
 </section>
-
-<section>
-	<header>
-		<h2>Graduate Alumni</h2>
-	<p>
-											<center>
-														 <a href="http://www.dianazhang.net/"> <figure> <img src="images/Diana.png"
-															 alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
-																<figcaption>Dr. Diana Zhang<br></a><p style="margin-bottom:5px">Exploring Novel Sensing Paradigms for Existing Wireless Infrastructure</p><p style="margin-bottom:10px">(Now at JHU-APL)</p></figcaption> </figure>
-
-											</center>
-	</p>
-	<p>
-	</p>
-</section>
-										<section>
+<!--										<section>
 											<header>
 												<h2>Graduate Collaborators</h2>
 											<p>
@@ -231,7 +226,7 @@
 																									<img src="images/Rashad.jpg"
                                                    alt="" style="width:135px;height:200px;border: #FFFFFF 4px solid"/>
 																									 <figcaption>Rashad Eletreby</a><br>Advisor: Osman Yagan, CMU</figcaption> </figure>
-
+                                           
 
                                                 <a href="https://tinyurl.com/revathynarayanan"> <figure> <img src="images/Revathy.jpg"
                                                    alt="" style="width:200px;height:200px;border: #FFFFFF 4px solid"/>
@@ -253,6 +248,7 @@
                                         </center>
 											</p>
 										</section>
+										-->
                                         <section>
 											<header>
 												<h2>Summer Interns</h2>
@@ -381,3 +377,4 @@
 
 	</body>
 </html>
+
