Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -151,15 +151,16 @@
 										</section>
 										<section>
 											<header>
-												<h2>Graduate Students</h2>
-											<p>
+												<h2>Ph.D. Students</h2>
+	<p>
 												<center>
+<!--										
                                                 <a href="http://www.dianazhang.net/">
 																									<figure>
 																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
 																								 <figcaption> Diana Zhang </figcaption> </figure>
 																								 </a>
-
+-->
  																								
      <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
@@ -217,6 +218,21 @@
 
 </header>
 </section>
+<section>
+<header>
+
+												<h2>Ph.D. Alumni</h2>
+											<p>
+												<center>
+                                                <a href="http://www.dianazhang.net/">
+																									<figure>
+																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
+																								 <figcaption> Diana Zhang </figcaption> </figure>
+																								 </a>
+
+</center>
+</header>
+</section>
 <!--										<section>
 											<header>
 												<h2>Graduate Collaborators</h2>
@@ -253,6 +269,14 @@
 											<header>
 												<h2>Summer Interns</h2>
 											</header>
+
+                                            <p>
+                                                Summer 2021 Interns:
+                                                <ul><li>Riddhiman Lahiri</li>
+                                                <li>Diksha Agarwal</li>
+                                                </ul>
+                                            </p>
+
 											<p>
                                                 Summer 2019 Interns:
 												<center>
