Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -200,6 +200,13 @@
 
 
 																								 </a>
+
+     <a href="https://www.andrew.cmu.edu/user/kuangy/"> <figure> <img src="images/Kuang.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Kuang Yuan</a><br></figcaption> </figure>
+
+
+																								 </a>
 																							 </center>
 											</p>
 											<p>
