--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,7 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>Lean Privacy Review: Collecting Users' Privacy Concerns of Data Practices at a Low Cost</strong>, Haojian Jin, Hong Shen, Mayank Jain, Swarun Kumar, and Jason Hong, TOCHI  2021 [<a href="lpr.html">WEBSITE</a>]<br /></li>
 <li><strong>TagFi: Locating Ultra-Low Power WiFi Tags Using Unmodified WiFi Infrastructure</strong>, Elahe Soltanaghaei, Adwait Dongare, Akarsh Prabhakara, Swarun Kumar, Anthony Rowe and Kamin Whitehouse, UbiComp  2021 [<a href="papers/tagfi-ubicomp2021.pdf">PAPER</a>] [<a href="tagfi.html">WEBSITE</a>]<br /></li>
 <li><strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021 [<a href="papers/owll-ipsn2021.pdf">PAPER</a>] [<a href="owll.html">WEBSITE</a>]<br /></li>
 <li><strong>Locating Everyday Objects using NFC Textiles</strong>, Jingxian Wang (Co-Primary), Junbo Zhang (Co-Primary), Ke Li, Chengfeng Pan, Carmel Majidi and Swarun Kumar, IPSN  2021 <em>(Best Paper Award)</em> [<a href="papers/textilesense-ipsn2021.pdf">PAPER</a>] [<a href="textilesense.html">WEBSITE</a>]<br /></li>
