Swarun: Changed website

--- a/people.html
+++ b/people.html
@@ -201,7 +201,7 @@
 
 																								 </a>
 
-     <a href="https://www.andrew.cmu.edu/user/kuangy/"> <figure> <img src="images/Kuang.jpg"
+     <a href="https://www.andrew.cmu.edu/user/kuangy/"> <figure> <img src="images/Kuang.png"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
 																								    <figcaption>Kuang Yuan</a><br></figcaption> </figure>
 
