--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -108,53 +108,54 @@
                     <h3 class="section-title"> LP-IoT'21 Program</h3>
                 </div>
             </div>
+<!--
 <div>
 Page will be updated in August.
 </div>
-<!--
- <table border="0" cellspacing="10">
+-->
+ <table border="0" cellspacing="100" style="border-spacing: 1em .5em;">
   <tr>
-    <th> </th>
+    <th>All times in CST </th>
     <th></th>
   </tr>
   <tr>
-    <td>08:00 - 09:00</td>
-    <td>Registrations and Coffee</td>
+    <td>08:00 - 9:45</td>
+    <td>Registration and Coffee + Breakfast </td>
   </tr>
- <tr>
-    <td> 09:00 - 09:10</td>
+  <p></p>
+  <tr>
+    <td> 09:45 - 10:00</td>
     <td> Welcome and Introductory Remarks</td>
   </tr>
+  <br>
    <tr>
-    <td> 09:10 - 10:30</td>
-    <td> <b>Session I: Running Experiments in Real World </b></td>
+    <td> 10:00 - 11:00</td>
+    <td> <b>Keynote Lecture: Prof. Joshua Smith </b></td>
+  </tr>
+  <tr>
+    <td> 11:00 - 12:00</td>
+    <td> <b>Panel Discussion: Low-Power IoT for Agriculture, Environment and Industry </b></br>Moderator: Prof. Swarun Kumar</td>
   </tr>
   <tr>
     <td> </td>
     <td>
        <ulx>
-       <li> FLEX-MONROE: A Unified Platform for Experiments under Controlled and Operational LTE Settings
-       <li> Results from running an experiment as a service platform for mobile networks
-       <li> cniCloud: Querying the Cellular Network Information at Scale
-       <li> Repeatability of Vehicular Measurements on Public Roadways
+       <li> Prof. Pat Pannuto (University of California, San Diego)
+       <li> Prof. Yao Peng (Northwest University, China)
+       <li> Dr. Bob Iannucci (Google)
+       <li> Prof. Robin Kravets (University of Illinois, Urbana-Champaign)
        <ulx>
     </td>
   </tr>
-    <tr>
-    <td> 10:30 - 11:00 </td>
-    <td> Coffee Break
-   </tr>
- <tr>
-    <td> 11:00 - 12:00  </td>
-    <td> <b> Keynote: Prof. Marco Gruteser </b>
-   </tr>
- <tr>
-    <td> 12:00 - 13:00   </td>
-    <td> Lunch break
-   </tr>
 
     <tr>
-    <td>  13:00 - 14:00 </td>
+    <td> 12:00 - 1:30 </td>
+    <td> Lunch Break (synchronized for in-person attendees)
+   </tr>
+
+<!-- 
+    <tr>
+   <td>  13:00 - 14:00 </td>
     <td> <b>Session II: Building Better SDR Platforms </b></td>
   </tr>
   <tr>
@@ -214,9 +215,10 @@ Page will be updated in August.
     <td>  17:00 - 17:10  </td>
     <td>   Awards and Conclusive Remarks</td>
   </tr>
+-->
  </table>
 </div>
--->
+
 
 
  </section>
