--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -149,73 +149,54 @@ Page will be updated in August.
   </tr>
 
     <tr>
-    <td> 12:00 - 1:30 </td>
+    <td> 12:00 - 13:30 </td>
     <td> Lunch Break (synchronized for in-person attendees)
    </tr>
 
-<!-- 
+
     <tr>
-   <td>  13:00 - 14:00 </td>
-    <td> <b>Session II: Building Better SDR Platforms </b></td>
+   <td>  13:30 - 14:50 </td>
+    <td> <b>Research Paper Presentations</b> (Session Chair: Prof. Deepak Vasisht)</td>
   </tr>
   <tr>
     <td> </td>
     <td>
        <ulx>
-         <li> Cellular Access Multi-Tenancy through Small Cell Virtualization and Common RF Front-End Sharing
-	<li>LTE Spectrum Sharing Research Testbed: Integrated Hardware, Software, Network and Data
-	<li> LTESS-track: A precise and fast frequency offset estimation for low-cost SDR platforms
+         <li> Experiences in LP-IoT: EnviSense Deployment of Remotely Reprogrammable Environmental Sensors <br> Reese Grimsley (CMU), Mathieu Marineau (USGS), Bob Iannucci (CMU)
+	       <li> Soil Power? Can Microbial Fuel Cells Power Non-Trivial Sensors? <br> Gabriel Marcano, Pat Pannuto (UCSD)
+	       <li> Plant Keeper: Towards Wireless Sensing to Ion Transmission of Plants <br> Junchao Zhang, Zhaolong Wei, Jialiang Sun, Miaojie Guo, Xuan Huang, Xiaojiang Chen, Dingyi Fang, Yao Peng (Northwest University)
+         <li> smol: Sensing Soil Moisture using LoRa <br> Daniel Kiv, Garvita Allabadi, Berkay Kaplan, Robin Kravets (UIUC)
        <ulx>
     </td>
   </tr>
       <tr>
-    <td>  14:00 - 14:20 </td>
-    <td> Coffee Break </td>
+    <td>  14:50 - 15:00 </td>
+    <td> Break </td>
   </tr>
   <tr>
-    <td>  14:20 - 15:40 </td>
-    <td> <b>Session III: Innovative Experimentation Platforms and Methods </b></td>
+    <td>  15:00 - 17:00 </td>
+    <td> <b>Invited Talks </b></td>
   </tr>
   <tr>
     <td> </td>
     <td>
        <ulx>
-         <li>Nexmon: Build Your Own Wi-Fi Testbeds With Low-Level MAC and PHY-Access Using Firmware Patches on Off-the-Shelf Mobile Devices
-	<li> Finding by Counting: A Probabilistic Packet Count Model for Indoor Localization in BLE Environments
-	<li> X60: A Programmable Testbed for Wideband 60 GHz WLANs with Phased Arrays
-	<li> EVERUN - Enabling Power Consumption Monitoring in Underwater Networking Platforms
+         <li> Dr. Vaishnavi Ranganathan
+	       <li> Prof. Bashima Islam
+	       <li> Prof. Ambuj Varshney
+         <li> Prof. Vikram Iyer
        <ulx>
     </td>
   </tr>
     <tr>
-    <td>  15:40 - 16:00 </td>
-    <td> Coffee Break </td>
+    <td>  17:00 - 17:10 </td>
+    <td> <b> Best Paper Award and Conclusive Remarks</b> </td>
   </tr>
+</tr>
   <tr>
-   <td>  16:00 - 17:00 </td>
-    <td> <b>Demo and Poster Session </b></td>
-  </tr>
-  <tr>
-    <td> </td>
-    <td>
-       <ulx>
-         <li>Demo: Material Identification with Commodity RFID Devices
-         <li>Demo: Experimentation in Controlled and Operational LTE Se ings with FLEX-MONROE
-         <li>Demo: Enabling Asynchronous Awakenings in Wireless Sensor Networks Towards Removing Duty-Cycle Barriers
-         <li>Demo: In-situ Power Consumption Monitoring for Sensor Networks supporting Extreme Dynamic Range
-         <li>Demo: Spectrum Access System on Cognitive Radio Network Testbed
-         <li>Demo: Nexmon in Action: Advanced Applications Powered by the Nexmon Firmware Patching Framework
-         <li>Demo: Argos V3 (Invited demo)
-         <li>Poster: Integration of WiFi ToF Positioning System in the Open, Flexible and Adaptive WiSHFUL Architecture
-
-       <ulx>
-    </td>
-  </tr>
-  <tr>
-    <td>  17:00 - 17:10  </td>
-    <td>   Awards and Conclusive Remarks</td>
-  </tr>
--->
+  <td>  18:00 - 18:10 </td>
+  <td> <b> ACM MobiCom 2021 Welcome Reception</b> </td>
+</tr>
  </table>
 </div>
 
