--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -181,10 +181,10 @@ Page will be updated in August.
     <td> </td>
     <td>
        <ulx>
-         <li> Dr. Vaishnavi Ranganathan
-	       <li> Prof. Bashima Islam
-	       <li> Prof. Ambuj Varshney
-         <li> Prof. Vikram Iyer
+         <li> Dr. Vaishnavi Ranganathan (Microsoft)
+	       <li> Prof. Bashima Islam (Worcester Polytechnic Institute)
+	       <li> Prof. Ambuj Varshney (UC Berkeley, NU Singapore)
+         <li> Prof. Vikram Iyer (University of Washington)
        <ulx>
     </td>
   </tr>
