--- a/lpiot2021/index.html
+++ b/lpiot2021/index.html
@@ -142,7 +142,7 @@ Page will be updated in August.
        <ulx>
        <li> Prof. Pat Pannuto (University of California, San Diego)
        <li> Prof. Yao Peng (Northwest University, China)
-       <li> Dr. Bob Iannucci (Google)
+       <li> Dr. Bob Iannucci (Carnegie Mellon University)
        <li> Prof. Robin Kravets (University of Illinois, Urbana-Champaign)
        <ulx>
     </td>
