--- a/xg.html
+++ b/xg.html
@@ -165,6 +165,8 @@ This project aims to devise next-generation wireless networks that achieve faste
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>MiLTOn: Sensing Product Integrity without Opening the Box using Non-Invasive Acoustic Vibrometry</strong>, Akshay Gadre, Deepak Vasisht, Nikunj Raghuvanshi, Bodhi Priyantha, Manikanta Kotaru, Swarun Kumar and Ranveer Chandra
+, IPSN  2022 [<a href="papers/milton-ipsn2022.pdf">PAPER</a>] [<a href="milton.html">WEBSITE</a>]<br /></li>
 <li><strong>A Community-Driven Approach to Democratize Access to Satellite Ground Stations</strong>, Vaibhav Singh, Akarsh Prabhakara, Diana Zhang, Osman Yagan and Swarun Kumar, MobiCom  2021 [<a href="papers/quasar-mobicom2021.pdf">PAPER</a>] [<a href="quasar.html">WEBSITE</a>]<br /></li>
 <li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
 <li><strong>Full Duplex Radios: Are we there yet?</strong>, Vaibhav Singh (Co-Primary), Akshay Gadre (Co-Primary) and Swarun Kumar, HotNets  2020 [<a href="papers/fdstudy-hotnets2020.pdf">PAPER</a>] [<a href="fdstudy.html">WEBSITE</a>]<br /></li>
