--- a/fastloc.html
+++ b/fastloc.html
@@ -135,62 +135,33 @@
 							<div class="row">
 
 
-<div class="6u 12u(mobile)"> <section>
-<strong>Project: Security and Privacy for Wireless Networks</h4> </strong><br /><br />
 
+<div class="6u 12u(mobile)"> <section> <strong><h4>Project FastLoc: Ultra Low-Latency Backscatter for Fast-moving Location Tracking</h4></strong><br />
 <table style="width:100%">
 <tr>
 <td>
-<div style="padding:0px;border-width:0px;border-style:solid">
-<img src="images/security.png" style="width:100%; height:350px;"/>
+<div style="padding:10px;border-width:2px;border-style:solid">
+<img src="images/fastloc.png" style="width:100%"/>
 </div>
 </td>
-</tr><tr>
+</tr>
+<tr>
 <td style="width:10px">
 <br />
 </td>
 </tr><tr>
 <td style="vertical-align:middle">
-This project aims to study the security and privacy challenges associated with next-generation wireless networks. We study the unique security challenges imposed by the Internet of Things, where wireless devices have significantly lower power, compute and communication bandwidth compared to high-power adversaries. We develop a deep learning based wireless authentication solution that uses the imperfections of wireless radios to our advantage in uniquely identifying them. We also develop a suite of solutions in ensuring threat and anomaly detection in the presence of high-mobility wireless radios, such as in robotic swarms. </td>
+We propose and demonstrate FastLoc, a precision tracking system that locates tiny, battery-free analog backscatter tags at sub-millisecond latency and sub-centimeter accuracy. FastLoc is a hybrid system that simultaneously uses RF and optical signals to track tiny tags that can be attached to everyday objects. FastLoc leverages the RF channel responses from tags for estimating the coarse region where the tags may be located. It simultaneously uses the sensed optical information modulated on the backscatter signals to enable fine-grained location estimation within the coarse region. To achieve this, we design and fabricate a custom analog tag that consumes less than 150 uW and instantaneously converts incident optical signals to one-shot wideband harmonic RF responses at nanosecond latency. We then develop a static high-density distributed-frequency structured light pattern that can localize tags in the area of interest at a sub-centimeter accuracy and microsecond-scale latency. A detailed experimental evaluation of FastLoc shows a median accuracy of 0.7 cm in tag localization with a 0.51 ms effective localization latency.
+</td>
 </tr>
 </table>
-<br />
-</section><section>
-<strong style="margin-left:0px">Video Highlight</h4> </strong><br />
-    <iframe style="margin-top: 10px; height:300px" width="100%; height="300px" src="https://www.youtube.com/embed/8NeQoRQgqjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<br /> <br /></section>
-</div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Publications</h4> </strong><br />
-<ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
-<li><strong>Exploring the Needs of Users for Supporting Privacy-protective Behavior in Smart Homes</strong>, Haojian Jin, Boyuan Guo, Rituparna Roychoudhury, Yaxing Yao, Swarun Kumar, Yuvraj Agarwal and Jason Hong, CHI  2022 [<a href="ppb.html">WEBSITE</a>]<br /></li>
-<li><strong>Lean Privacy Review: Collecting Users' Privacy Concerns of Data Practices at a Low Cost</strong>, Haojian Jin, Hong Shen, Mayank Jain, Swarun Kumar, and Jason Hong, TOCHI  2021 [<a href="papers/lpr-tochi2021.pdf">PAPER</a>] [<a href="lpr.html">WEBSITE</a>]<br /></li>
-<li><strong>Poster - NoFaceContact: Stop Touching Your Face with NFC</strong>, Junbo Zhang and Swarun Kumar, MobiSys  2020 [<a href="nofacecontact.html">WEBSITE</a>]<br /></li>
-<li><strong>A Deep Learning Approach to IoT Authentication </strong>, Rajshekhar Das, Akshay Gadre, Shanghang Zhang, Swarun Kumar and Jose Moura, ICC  2018 [<a href="papers/dliot-icc2018.pdf">PAPER</a>] [<a href="dliot.html">WEBSITE</a>]<br /></li>
-<li><strong>Guaranteeing Spoof-Resilient Multi-Robot Networks</strong>, Stephanie Gil (Co-primary), Swarun Kumar (Co-primary), Mark Mazumder, Dina Katabi and Daniela Rus, RSS  2015<br /></li>
-</ul>
-
 </section>
 </div>
-<div class="6u 12u(mobile)">
-<section>
-
-<strong style="margin-left:0px">Project Participants</h4> </strong><br />
-
-
-<ul style="margin-top: 10px"> 
-<li> <strong> PI: </strong> Swarun Kumar </li>
-<li> <strong> Students: </strong> 
-Junbo Zhang, Haojian Jin and Akshay Gadre</li>
-<li> <strong> Collaborators: </strong> Prof. Soummya Kar, Prof. Osman Ya&gbreve;an and Prof. Jos&eacute;  Moura</li></ul>
-
-
-</div>
-
-
-										</section>
+<div class="6u 12u(mobile)"> <section> 
+<strong><h4 style="margin-left:0px;">Citation</h4></strong>
+<ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
+<li> <strong>Ultra Low-Latency Backscatter for Fast-moving Location Tracking</strong>, Jingxian Wang, Vaishnavi Ranganathan, Jonathan Lester and Swarun Kumar, UbiComp 2022<br /><br />
+</li></ul></div>										</section>
 
 								</div>
 							</div>
@@ -281,3 +252,4 @@ Junbo Zhang, Haojian Jin and Akshay Gadre</li>
 
 	</body>
 </html>
+
