--- a/lpwan.html
+++ b/lpwan.html
@@ -165,6 +165,7 @@ Low-Power Wide-Area Networks (LP-WANs) aim to provide wireless connectivity at e
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>SelfieStick: Towards Earth Imaging from a Low-Cost Ground Module Using LEO Satellites</strong>, Vaibhav Singh, Osman Yagan and Swarun Kumar, IPSN  2022 [<a href="papers/selfiestick-ipsn2022.pdf">PAPER</a>] [<a href="selfiestick.html">WEBSITE</a>]<br /></li>
 <li><strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021 [<a href="papers/owll-ipsn2021.pdf">PAPER</a>] [<a href="owll.html">WEBSITE</a>]<br /></li>
 <li><strong>Locating Everyday Objects using NFC Textiles</strong>, Jingxian Wang (Co-Primary), Junbo Zhang (Co-Primary), Ke Li, Chengfeng Pan, Carmel Majidi and Swarun Kumar, IPSN  2021 <em>(Best Paper Award)</em> [<a href="papers/textilesense-ipsn2021.pdf">PAPER</a>] [<a href="textilesense.html">WEBSITE</a>]<br /></li>
 <li><strong>Quick (and Dirty) Aggregate Queries on Low-Power WANs</strong>, Akshay Gadre, Fan Yi, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2020 <em>(Best Paper Award)</em> [<a href="papers/quail-ipsn2020.pdf">PAPER</a>] [<a href="quail.html">WEBSITE</a>]<br /></li>
