--- a/publications.html
+++ b/publications.html
@@ -145,6 +145,12 @@ Our research interests are in the area of computer networks with a special focus
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
+<li><strong>PLatter: On the Feasibility of Building-scale Power Line Backscatter</strong>, Junbo Zhang, Elahe Soltanaghaei, Artur Balanuta, Reese Grimsley, Swarun Kumar and Anthony Rowe, NSDI 2022 [<a href="papers/platter-nsdi2022.pdf">PAPER</a>] [<a href="platter.html">WEBSITE</a>]<br /></li>
+<li><strong>Ultra Low-Latency Backscatter for Fast-moving Location Tracking</strong>, Jingxian Wang, Vaishnavi Ranganathan, Jonathan Lester and Swarun Kumar, UbiComp 2022 [<a href="fastloc.html">WEBSITE</a>]<br /></li>
+<li><strong>SelfieStick: Towards Earth Imaging from a Low-Cost Ground Module Using LEO Satellites</strong>, Vaibhav Singh, Osman Yagan and Swarun Kumar, IPSN  2022 [<a href="papers/selfiestick-ipsn2022.pdf">PAPER</a>] [<a href="selfiestick.html">WEBSITE</a>]<br /></li>
+<li><strong>MiLTOn: Sensing Product Integrity without Opening the Box using Non-Invasive Acoustic Vibrometry</strong>, Akshay Gadre, Deepak Vasisht, Nikunj Raghuvanshi, Bodhi Priyantha, Manikanta Kotaru, Swarun Kumar and Ranveer Chandra
+, IPSN  2022 [<a href="papers/milton-ipsn2022.pdf">PAPER</a>] [<a href="milton.html">WEBSITE</a>]<br /></li>
+<li><strong>Exploring the Needs of Users for Supporting Privacy-protective Behavior in Smart Homes</strong>, Haojian Jin, Boyuan Guo, Rituparna Roychoudhury, Yaxing Yao, Swarun Kumar, Yuvraj Agarwal and Jason Hong, CHI  2022 [<a href="ppb.html">WEBSITE</a>]<br /></li>
 <li><strong>Lean Privacy Review: Collecting Users' Privacy Concerns of Data Practices at a Low Cost</strong>, Haojian Jin, Hong Shen, Mayank Jain, Swarun Kumar, and Jason Hong, TOCHI  2021 [<a href="papers/lpr-tochi2021.pdf">PAPER</a>] [<a href="lpr.html">WEBSITE</a>]<br /></li>
 <li><strong>TagFi: Locating Ultra-Low Power WiFi Tags Using Unmodified WiFi Infrastructure</strong>, Elahe Soltanaghaei, Adwait Dongare, Akarsh Prabhakara, Swarun Kumar, Anthony Rowe and Kamin Whitehouse, UbiComp  2021 [<a href="papers/tagfi-ubicomp2021.pdf">PAPER</a>] [<a href="tagfi.html">WEBSITE</a>]<br /></li>
 <li><strong>OwLL: Accurate LoRa Localization using the TV Whitespaces</strong>, Atul Bansal, Akshay Gadre, Vaibhav Singh, Anthony Rowe, Bob Iannucci and Swarun Kumar, IPSN  2021 [<a href="papers/owll-ipsn2021.pdf">PAPER</a>] [<a href="owll.html">WEBSITE</a>]<br /></li>
