--- a/metamoran.html
+++ b/metamoran.html
@@ -157,10 +157,14 @@
 </table>
 </section>
 </div>
-<div class="6u 12u(mobile)"> <section> 
+<div class="6u 12u(mobile)"> <section>
+ <strong><h4 style="margin-left:0px">Video</h4></strong> 
+    <iframe style="margin-top: 10px"  width="100%" height="315" src="https://www.youtube.com/embed/WkGHeRXa8ws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </section>
+
+</section><section> 
 <strong><h4 style="margin-left:0px;">Citation</h4></strong>
 <ul style="margin-left:30px; margin-top:10px; list-style-type: disc">
-<li> <strong>Exploring mmWave Radar and Camera Fusion for High-Resolution and Long-Range Depth Imaging</strong>, Akarsh Prabhakara (Co-Primary), Diana Zhang (Co-Primary), Chao Li, Sirajum Munir, Aswin Sankaranarayanan, Anthony Rowe and Swarun Kumar, IROS 2022<br /><br />
+<li> <strong>Exploring mmWave Radar and Camera Fusion for High-Resolution and Long-Range Depth Imaging</strong>, Akarsh Prabhakara (Co-Primary), Diana Zhang (Co-Primary), Chao Li, Sirajum Munir, Aswin Sankaranarayanan, Anthony Rowe and Swarun Kumar, IROS 2022 [<a href="papers/metamoran-iros2022.pdf">PAPER</a>] [<a href="slides/metamoran-iros2022.pdf">SLIDES</a>]<br /><br />
 </li></ul></div>										</section>
 
 								</div>
