Swarun: Changed website

--- a/bfree.html
+++ b/bfree.html
@@ -165,6 +165,7 @@ This project aims to ask: Can we connect to battery-free devices over extremely 
 
 <strong style="margin-left:0px">Publications</h4> </strong><br />
 <ul style="list-style-type: disc; margin-top: 10px; margin-left:40px">
+<li><strong>NFCapsule: An Ingestible Sensor Pill for Eosinophilic Esophagitis Detection Based on Near-field Coupling</strong>, Junbo Zhang, Gaurav Balakrishnan, Sruti Srinidhi, Arnav Bhat, Swarun Kumar and Christopher Bettinger, SenSys 2022 [<a href="papers/nfcapsule-sensys2022.pdf">PAPER</a>] [<a href="nfcapsule.html">WEBSITE</a>]<br /></li>
 <li><strong>PLatter: On the Feasibility of Building-scale Power Line Backscatter</strong>, Junbo Zhang, Elahe Soltanaghaei, Artur Balanuta, Reese Grimsley, Swarun Kumar and Anthony Rowe, NSDI 2022 [<a href="papers/platter-nsdi2022.pdf">PAPER</a>] [<a href="platter.html">WEBSITE</a>]<br /></li>
 <li><strong>Exploring mmWave Radar and Camera Fusion for High-Resolution and Long-Range Depth Imaging</strong>, Akarsh Prabhakara (Co-Primary), Diana Zhang (Co-Primary), Chao Li, Sirajum Munir, Aswin Sankaranarayanan, Anthony Rowe and Swarun Kumar, IROS 2022 [<a href="papers/metamoran-iros2022.pdf">PAPER</a>] [<a href="slides/metamoran-iros2022.pdf">SLIDES</a>] [<a href="metamoran.html">WEBSITE</a>]<br /></li>
 <li><strong>Toolbox Release: A WiFi-Based Relative Bearing Sensor for Robotics</strong>, Ninad Jadhav, Weiying Wang, Diana Zhang, Swarun Kumar and Stephanie Gil, IROS 2022 [<a href="wsr.html">WEBSITE</a>]<br /></li>
