Swarun: Changed website

--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 												<!--<h3>A subheading about what we do</h3> -->
 											</header>
 											<ul class="check-list">
+<li> (8/22) Three Ph.D. students graduate from WiTech lab to join as faculty at UW, UCSD and NUS!
 <li> (7/22) Two papers at IROS'22 on robotic sensing using <a href="metamoran.html">mmWave</a> and <a href="wsr.html">Wi-Fi</a>.
 <li> (3/22) Our paper on <a href="platter.html">powerline backscatter</a> is accepted at NSDI'22
 <li> (2/22) Our paper on <a href="fastloc.html">fast RFID localization</a> is accepted at UbiComp'22
