--- a/people.html
+++ b/people.html
@@ -160,7 +160,6 @@
 																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
 																								 <figcaption> Diana Zhang </figcaption> </figure>
 																								 </a>
--->
  																								
      <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
@@ -174,6 +173,8 @@
  																									<figure>
  																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
  																								 <figcaption> Jingxian Wang </figcaption> </figure>
+
+-->
 
      <a href="https://vaibhavsingh96.github.io/"> <figure> <img src="images/Vaibhav.jpg"
                                                    alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
@@ -236,6 +237,20 @@
 																										<img src="images/Diana.png" alt="" style="width:150px;height:200px;border: #FFFFFF 4px solid"/>
 																								 <figcaption> Diana Zhang </figcaption> </figure>
 																								 </a>
+
+	
+     <a href="http://shift-3.com/"> <figure> <img src="images/Haojian.jpg"
+                                                   alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+																								    <figcaption>Haojian Jin</a><br><div style="margin-bottom:10px">Co-advised by Prof. Jason Hong</div></figcaption> </figure>
+ 		
+
+																								 <a href="https://akshaygadre.github.io/"> 	<figure>																								<img src="images/Akshay.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+ 																								 <figcaption> Akshay Gadre </figcaption> </figure>
+																								 </a>
+																								 <a href=" https://jingxianwang.github.io/">
+ 																									<figure>
+ 																										<img src="images/Jingxian.jpg" alt="" style="width:175px;height:200px;border: #FFFFFF 4px solid"/>
+ 																								 <figcaption> Jingxian Wang </figcaption> </figure>
 
 </center>
 </header>
