Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title> WiTech Lab </title>
+		<title>NSF NeTS PI Meeting 2023 (Feb 23-24, Virtual)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -20,26 +20,27 @@
 	<body>
 		<div id="page-wrapper">
 
-			<!-- Header -->
+			<!-- Header 
 				<div id="header-wrapper">
 					<header id="header" class="container">
 						<div class="row">
 							<div class="12u">
 
-								<!-- Logo -->
+								<!-- Logo 
 									<h1><a href="#" id="logo">WiTech Lab</a></h1> 
 
-								<!-- Nav -->
+								<!-- Nav 
 									<nav id="nav">
 										<a href="../index.html">Homepage</a>
 										<a href="../people.html">People</a>
 										<a href="../research.html">Research</a>
 										<a href="../publications.html">Publications</a>
-										<!--<a href="onecolumn.html">About Us</a>-->
+										<!--<a href="onecolumn.html">About Us</a>
 									</nav>
 
 							</div>
 						</div>
+-->
 					</header>
 					<div id="banner">
 						<div class="container">
@@ -47,7 +48,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p style="padding-top:30px">NSF NeTS PI Meeting 2023 (Feb 23-24, Virtual)</p>
+										<p style="padding-top:50px;font-weight:bold;color:black;">NSF NeTS PI Meeting 2023 (Feb 23-24, Virtual)</p>
 										<!--<a href="#" class="button-big">Learn More</a> -->
 
 								</div>
@@ -145,12 +146,12 @@
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
-<li> 1:00 - 1:30: Welcome (Brief remarks by Workshop Chairs, NeTS PMs)
+<li> 1:00 - 1:30: Welcome (Brief remarks by Workshop Chairs, NeTS PDs)
 <li> 1:30 - 3:00: Breakout Session D1-I 
 <li> 3:00 - 3:30: Breakout summary D1-I
 <li> 3:30 - 4:00: Break
 <li> 4:00 - 5:00:  Keynote I (Prof. Jim Kurose) 
-<li> 5:00 - 5:30 Panel Discussion D1 Ask-Me-Anything with NeTS PMs
+<li> 5:00 - 5:30 Panel Discussion D1 Ask-Me-Anything with NeTS PDs
 </ul>
 </div>
 
@@ -165,7 +166,7 @@
 <li> 11:15pm - 12:15pm Panel Discussion D2 (Future of Networks) 
 <li> 12:15pm - 1:45pm Breakout Session D2-I
 <li> 1:45pm - 2:30 pm Break / Lunch 
-<li> 2:30pm - 3:00 pm Breakout Summary I 
+<li> 2:30pm - 3:00 pm Breakout Summary D2-I 
 <li> 3:00pm - 4:30pm Breakout Session D2-II
 <li> 4:30pm - 4:45pm Break
 <li> 4:45pm - 5:15pm Breakout summary D2-II 
