Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -141,22 +141,22 @@
 
 <strong><h4 style="margin-left:30px">AGENDA</h4></strong>
 <div style="margin-left:30px">
-<b>Thursday, Feb 23</b><br />
+<b>Thursday, Feb 23 (all times EST)</b><br />
 </div>
 
 <div style="margin-left:60px">
 <ul style="list-style-type: disc">
-<li> 1:00 - 1:30: Welcome (Brief remarks by Workshop Chairs, NeTS PDs)
-<li> 1:30 - 3:00: Breakout Session D1-I 
-<li> 3:00 - 3:30: Breakout summary D1-I
-<li> 3:30 - 4:00: Break
-<li> 4:00 - 5:00:  Keynote I (Prof. Jim Kurose) 
-<li> 5:00 - 5:30 Panel Discussion D1 Ask-Me-Anything with NeTS PDs
+<li> 1:00pm - 1:30pm: Welcome (Brief remarks by Workshop Chairs, NeTS PDs)
+<li> 1:30pm - 3:00pm: Breakout Session D1-I 
+<li> 3:00pm - 3:30pm: Breakout summary D1-I
+<li> 3:30pm - 4:00pm: Break
+<li> 4:00pm - 5:00pm:  Keynote I (Prof. Jim Kurose) 
+<li> 5:00pm - 5:30pm: Panel Discussion D1 Ask-Me-Anything with NeTS PDs
 </ul>
 </div>
 
 <div style="margin-left:30px">
-<b>Friday, Feb 24</b><br />
+<b>Friday, Feb 24  (all times EST)</b><br />
 </div>
 
 <div style="margin-left:60px">
@@ -165,12 +165,12 @@
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
 <li> 11:15pm - 12:15pm Panel Discussion D2 (Future of Networks) 
 <li> 12:15pm - 1:45pm Breakout Session D2-I
-<li> 1:45pm - 2:30 pm Break / Lunch 
-<li> 2:30pm - 3:00 pm Breakout Summary D2-I 
+<li> 1:45pm - 2:30pm Break / Lunch 
+<li> 2:30pm - 3:00pm Breakout Summary D2-I 
 <li> 3:00pm - 4:30pm Breakout Session D2-II
 <li> 4:30pm - 4:45pm Break
 <li> 4:45pm - 5:15pm Breakout summary D2-II 
-<li> 5:15 pm - 5:30 pm Conclusion
+<li> 5:15pm - 5:30pm Conclusion
 </ul>
 </div>
 
@@ -186,6 +186,68 @@
 The registration link for the NeTS PI meeting, to be held virtually Thursday(half day) and Friday, February 23-24,  is now available <a href="https://nsf.zoomgov.com/meeting/register/vJItdeGpqjMrEh_FsVpZiZDQxyNmbOfzhgc"><b>here</b></a>.  Note that this link also includes questions about your areas of interest, and asks you to indicate whether you will attend both days of the meeting.   We request that you register by <i>5:00 PM ET on Tuesday February 14th</i> to facilitate meeting planning, including for breakout sessions. 
 
 
+</div>
+
+
+										</section>
+
+								</div>
+
+<div class="12u"><section>
+
+<strong><h4 style="margin-left:30px" name="topics" id="topics">BREAKOUT TOPICS</h4></strong>
+
+<div style="margin-left:30px">
+<b>Breakout D1-I Topics - Thursday, Feb 23 (1:30PM - 3PM ET / 10:30AM - 12PM PT)</b><br />
+</div>
+
+
+<div style="margin-left:60px">
+<ul style="list-style-type: disc">
+<li> Quantum Networking
+<li> Software-Defined and Programmable Networks
+<li> Sharing Best Practices: On Writing a Good NeTS Proposal
+<li> Machine Learning and Networking
+<li> Next-Generation Wireless
+<li> Backscatter Communication and Low-Power Wireless
+<li> Network Security, Privacy and Resilience
+</ul>
+</div>
+
+<div style="margin-left:30px">
+<b>Breakout D2-I Topics - Friday, Feb 24 (12:15PM - 1:45PM ET / 9:15AM - 10:45AM PT)</b><br />
+</div>
+
+
+<div style="margin-left:60px">
+<ul style="list-style-type: disc">
+<li> Machine Learning and Networking 
+<li> Space and Airborne Networking
+<li> Mobile Health and Networking for Medical Environments
+<li> Network Design for Future Telepresence Applications AR/VR/XR
+<li> IoT in New Domains
+<li> Next-Generation Wireless
+<li> Cloud Networking & Data Centers
+<li> Energy Consumption and Sustainability
+</ul>
+</div>
+
+<div style="margin-left:30px">
+<b>Breakout D2-II Topics - Friday, Feb 24 (3PM - 4:30PM ET / 12PM - 1:30PM PT)</b><br />
+</div>
+
+
+<div style="margin-left:60px">
+<ul style="list-style-type: disc">
+<li> Future of Research Testbeds and Platforms
+<li> Next-Generation Wireless
+<li> Network Measurement and Analysis
+<li> Machine Learning and Networking
+<li> Broadening Participation in Computing – NeTS Perspectives
+<li> Reconfigurable Surfaces and Meta Materials for Mobile Systems
+<li> IoT in New Domains
+<li> Future Networking Curriculum
+</ul>
 </div>
 
 
