Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -163,7 +163,7 @@
 <ul style="list-style-type: disc">
 <li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
-<li> 11:15pm - 12:15pm Panel Discussion D2 (Future of Networks) 
+<li> 11:15am - 12:15pm Panel Discussion D2 (Future of Networks) 
 <li> 12:15pm - 1:45pm Breakout Session D2-I
 <li> 1:45pm - 2:30pm Break / Lunch 
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
