Swarun: Changed website

--- a/nsf2023/index.html
+++ b/nsf2023/index.html
@@ -163,7 +163,7 @@
 <ul style="list-style-type: disc">
 <li> 10:00am - 11:00am Keynote II (Dr. Margaret Martonosi)
 <li> 11:00am - 11:15am Day 2 Welcome (Brief remarks on agenda Workshop Chairs, NeTS PMs)
-<li> 11:15am - 12:15pm Panel Discussion D2 (Future of Networks) 
+<li> 11:15am - 12:15pm Panel Discussion D2 (Future of Networks - Dr. Ranveer Chandra, Prof. Don Towsley, Prof. Milan Yu, Prof. Xia Zhou) 
 <li> 12:15pm - 1:45pm Breakout Session D2-I
 <li> 1:45pm - 2:30pm Break / Lunch 
 <li> 2:30pm - 3:00pm Breakout Summary D2-I 
@@ -178,20 +178,6 @@
 </section>
 </div>
 
-<div class="12u"><section>
-
-<strong><h4 style="margin-left:30px">REGISTRATION</h4></strong>
-
-<div style="margin-left:30px">
-The registration link for the NeTS PI meeting, to be held virtually Thursday(half day) and Friday, February 23-24,  is now available <a href="https://nsf.zoomgov.com/meeting/register/vJItdeGpqjMrEh_FsVpZiZDQxyNmbOfzhgc"><b>here</b></a>.  Note that this link also includes questions about your areas of interest, and asks you to indicate whether you will attend both days of the meeting.   We request that you register by <i>5:00 PM ET on Tuesday February 14th</i> to facilitate meeting planning, including for breakout sessions. 
-
-
-</div>
-
-
-										</section>
-
-								</div>
 
 <div class="12u"><section>
 
@@ -248,6 +234,21 @@ The registration link for the NeTS PI meeting, to be held virtually Thursday(hal
 <li> IoT in New Domains
 <li> Future Networking Curriculum
 </ul>
+</div>
+
+
+										</section>
+
+								</div>
+
+<div class="12u"><section>
+
+<strong><h4 style="margin-left:30px">REGISTRATION</h4></strong>
+
+<div style="margin-left:30px">
+The registration link for the NeTS PI meeting, to be held virtually Thursday(half day) and Friday, February 23-24,  is now available <a href="https://nsf.zoomgov.com/meeting/register/vJItdeGpqjMrEh_FsVpZiZDQxyNmbOfzhgc"><b>here</b></a>.  Note that this link also includes questions about your areas of interest, and asks you to indicate whether you will attend both days of the meeting.   We request that you register by <i>5:00 PM ET on Tuesday February 14th</i> to facilitate meeting planning, including for breakout sessions. 
+
+
 </div>
 
 
